// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HOC (WithWrapper) snapshot should display an error span when there is an error 1`] = `
<WithWrapper
  checked={true}
  error="Cannot proceed like this"
>
  <div
    className=""
  >
    <InputCheckbox
      checked={true}
      onChange={[Function]}
      onKeyUp={[Function]}
    >
      <span
        onClick={[Function]}
      >
        <input
          checked={true}
          onChange={[Function]}
          onKeyUp={[Function]}
          type="checkbox"
        />
        <span />
      </span>
    </InputCheckbox>
    <span>
      Cannot proceed like this
    </span>
  </div>
</WithWrapper>
`;

exports[`HOC (WithWrapper) snapshot should include a label span when label is not defined in the child component 1`] = `
<WithWrapper
  label="My awesome label"
  value="hello-world"
>
  <div
    className=""
  >
    <Input
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="hello-world"
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="text"
        value="hello-world"
      />
    </Input>
    <span>
      My awesome label
    </span>
  </div>
</WithWrapper>
`;

exports[`HOC (WithWrapper) snapshot should not include a label span when the label is defined in the child component 1`] = `
<WithWrapper
  checked={true}
>
  <div
    className=""
  >
    <InputCheckbox
      checked={true}
      onChange={[Function]}
      onKeyUp={[Function]}
    >
      <span
        onClick={[Function]}
      >
        <input
          checked={true}
          onChange={[Function]}
          onKeyUp={[Function]}
          type="checkbox"
        />
        <span />
      </span>
    </InputCheckbox>
  </div>
</WithWrapper>
`;
